Fixed the overlap of compliance color indicator into the text/thumb nail

--- a/css/veos.css
+++ b/css/veos.css
@@ -243,7 +243,7 @@ a.relative {
 .compliance {
     width: 5%;
     position: absolute; top:0px; bottom:0px; left:0px;
-    width: 10px;
+    width: 1.3%;
 }
 
 .compliance.high {
